--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run apps:serve-ssr",
+    "serve:ssr": "node dist/apps/server/main.js",
+    "build:ssr": "ng build && ng run apps:server",
+    "prerender": "ng run apps:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,6 +23,8 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/platform-server": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@nguniversal/express-engine": "^15.1.0",
+    "express": "^4.15.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -27,6 +33,8 @@
     "@angular-devkit/build-angular": "^15.1.0",
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "^15.1.0",
+    "@nguniversal/builders": "^15.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^14.15.0",
     "jasmine-core": "~4.5.0",
