add /about to prerender routes

--- a/angular.json
+++ b/angular.json
@@ -157,7 +157,8 @@
           "builder": "@nguniversal/builders:prerender",
           "options": {
             "routes": [
-              "/"
+              "/",
+              "/about"
             ]
           },
           "configurations": {
