--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nguniversal/builders": "^15.1.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jest": "^29.2.5",
     "@types/node": "^14.15.0",
     "gh-pages": "^4.0.0",
     "jasmine-core": "~4.5.0",
