--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^15.1.0",
     "@nguniversal/express-engine": "^15.1.0",
     "express": "^4.15.2",
+    "material-design-lite": "github:rodydavis/material-design-lite#v3.0.0-rc.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
