--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/platform-server": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@angular/service-worker": "^15.1.0",
     "@nguniversal/express-engine": "^15.1.0",
     "express": "^4.15.2",
     "material-design-lite": "github:rodydavis/material-design-lite#v3.0.0-rc.1",
