cache additional third party assets using service worker, add build manifest script

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -36,6 +36,18 @@
           "https://fonts.gstatic.com/**"
         ]
       }
+    },
+    {
+      "name": "apps",
+      "installMode": "prefetch",
+      "updateMode": "prefetch",
+      "resources": {
+        "urls": [
+          "https://herrickdesign.com/**",
+          "https://infinitym.ca/**",
+          "https://content.karlherrick.com/**"
+        ]
+      }
     }
   ]
 }
