add infinitym component

--- a/angular.json
+++ b/angular.json
@@ -171,7 +171,8 @@
             "routes": [
               "/",
               "/about",
-              "/herrick-design"
+              "/herrick-design",
+              "/infinitym"
             ]
           },
           "configurations": {
