--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -17,7 +17,9 @@
           "**/about/",
           "**/about",
           "**/herrick-design/",
-          "**/herrick-design"
+          "**/herrick-design",
+          "**/infinitym/",
+          "**/infinitym"
         ]
       }
     },
