add karl-herrick component

--- a/angular.json
+++ b/angular.json
@@ -172,7 +172,8 @@
               "/",
               "/about",
               "/herrick-design",
-              "/infinitym"
+              "/infinitym",
+              "/karl-herrick"
             ]
           },
           "configurations": {
