--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -19,7 +19,9 @@
           "**/herrick-design/",
           "**/herrick-design",
           "**/infinitym/",
-          "**/infinitym"
+          "**/infinitym",
+          "**/karl-herrick/",
+          "**/karl-herrick"
         ]
       }
     },
