set urls to all but /apps/

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -14,14 +14,7 @@
           "/*.js"
         ],
         "urls": [
-          "**/about/",
-          "**/about",
-          "**/herrick-design/",
-          "**/herrick-design",
-          "**/infinitym/",
-          "**/infinitym",
-          "**/karl-herrick/",
-          "**/karl-herrick"
+          "!^/apps/$"
         ]
       }
     },
