--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "serve:ssr": "node dist/apps/server/main.js",
     "build:ssr": "ng build && ng run apps:server",
     "prerender": "npm run clean && ng run apps:prerender:development",
-    "prerender:production": "npm run clean && npm run base:set && npm run manifest:set && ng run apps:prerender:production && npm run base:unset && npm run manifest:unset && npm run ngsw:config",
+    "prerender:production": "npm run clean && npm run base:set && npm run manifest:set && ng run apps:prerender:production && npm run base:unset && npm run manifest:unset && npm run prerender:nojekyll && npm run ngsw:config",
     "prerender:gh-pages": "npm run prerender:production",
     "publish:gh-pages": "gh-pages --dist dist/apps/browser --remote upstream --no-history --dotfiles",
     "base:set": "node util/build-base.mjs src/index.html / /apps/",
     "base:unset": "node util/build-base.mjs src/index.html /apps/ /",
     "manifest:set": "node util/build-manifest.mjs src/manifest.webmanifest /apps/ /apps/",
     "manifest:unset": "node util/build-manifest.mjs src/manifest.webmanifest / /",
+    "prerender:nojekyll": "node util/touch-nojekyll.mjs",
     "ngsw:config": "ngsw-config ./dist/apps/browser/ ./ngsw-config.json /apps/",
     "format": "prettier --write src"
   },
