--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@angular/router": "^15.1.0",
     "@angular/service-worker": "^15.1.0",
     "@nguniversal/express-engine": "^15.1.0",
+    "dialog-polyfill": "^0.5.6",
     "express": "^4.15.2",
     "material-design-lite": "github:rodydavis/material-design-lite#v3.0.0-rc.1",
+    "minimal-c-sharp-wasm": "github:kherrick/minimal-c-sharp-wasm#0.0.1+angular",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
