setup pwgen functionality

--- a/angular.json
+++ b/angular.json
@@ -180,6 +180,7 @@
               "/herrick-design",
               "/infinitym",
               "/karl-herrick",
+              "/pwgen",
               "/calculator"
             ]
           },
