setup initial slides functionality

--- a/angular.json
+++ b/angular.json
@@ -177,6 +177,7 @@
               "/shell",
               "/",
               "/about",
+              "/slides",
               "/herrick-design",
               "/infinitym",
               "/karl-herrick",
