--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nguniversal/express-engine": "^15.1.0",
     "dialog-polyfill": "^0.5.6",
     "express": "^4.15.2",
+    "hammerjs": "^2.0.8",
     "material-design-lite": "github:rodydavis/material-design-lite#v3.0.0-rc.1",
     "minimal-c-sharp-wasm": "github:kherrick/minimal-c-sharp-wasm#0.0.1+angular",
     "pwgen": "^1.2.5",
@@ -54,6 +55,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@nguniversal/builders": "^15.1.0",
     "@types/express": "^4.17.0",
+    "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.2.5",
     "@types/node": "^14.15.0",
