--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
+    "parse5": "^7.2.1",
     "prettier": "^3.3.3",
     "sanitize-html": "^2.13.0",
     "typescript": "^5.5.4"
