--- a/package.json
+++ b/package.json
@@ -37,55 +37,67 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.5",
-    "@angular/cdk": "^19.2.0",
-    "@angular/common": "^19.1.5",
-    "@angular/compiler": "^19.1.5",
-    "@angular/core": "^19.1.5",
-    "@angular/forms": "^19.1.5",
-    "@angular/material": "^19.2.0",
-    "@angular/platform-browser": "^19.1.5",
-    "@angular/platform-browser-dynamic": "^19.1.5",
-    "@angular/platform-server": "^19.1.5",
-    "@angular/router": "^19.1.5",
-    "@angular/service-worker": "^19.1.5",
-    "@angular/ssr": "^19.2.0",
-    "@material/web": "^2.2.0",
+    "@angular/animations": "^20.0.0",
+    "@angular/cdk": "^20.0.1",
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/material": "^20.0.1",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/platform-browser-dynamic": "^20.0.0",
+    "@angular/platform-server": "^20.0.0",
+    "@angular/router": "^20.0.0",
+    "@angular/service-worker": "^20.0.0",
+    "@angular/ssr": "^20.0.0",
+    "@material/web": "^2.3.0",
+    "@ngrx/signals": "^19.2.1",
     "@tensorflow-models/blazeface": "^0.1.0",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-wasm": "^4.22.0",
-    "dialog-polyfill": "^0.5.6",
-    "express": "^4.21.2",
+    "express": "^5.1.0",
     "hammerjs": "^2.0.8",
     "material-design-lite": "github:kherrick/material-design-lite#v3.0.0-rc.1.4",
     "material-tokens": "github:kherrick/material-tokens",
     "minimal-c-sharp-wasm": "github:kherrick/minimal-c-sharp-wasm#0.0.1+angular",
+    "node-forge": "^1.3.1",
+    "peerjs": "github:kherrick/peerjs#v1.5.4-custom-events.0",
     "pwgen": "^1.2.6",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
+    "uuid": "^11.1.0",
     "x-pwgen-components": "github:kherrick/x-pwgen-components",
-    "zone.js": "^0.15.0"
+    "zone.js": "^0.15.0",
+    "zxing-wasm": "^2.1.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.6",
-    "@angular/cli": "^19.2.0",
-    "@angular/compiler-cli": "^19.1.5",
+    "@angular/build": "^20.0.0",
+    "@angular/cli": "^20.0.0",
+    "@angular/compiler-cli": "^20.0.0",
     "@types/express": "^5.0.0",
     "@types/hammerjs": "^2.0.46",
     "@types/jasmine": "^5.1.5",
+    "@types/md5": "^2.3.5",
     "@types/node": "^22.13.1",
-    "@xmldom/xmldom": "^0.9.7",
+    "@types/node-forge": "^1.3.11",
+    "@xmldom/xmldom": "^0.9.8",
+    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.3.0",
-    "htmlnano": "^2.1.1",
+    "htmlnano": "^2.1.2",
     "jasmine-core": "^5.6.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "parse5": "^7.2.1",
-    "prettier": "^3.5.0",
-    "sanitize-html": "^2.14.0",
-    "typescript": "^5.7.3"
+    "parse5": "^7.3.0",
+    "prettier": "^3.5.3",
+    "sanitize-html": "^2.16.0",
+    "typescript": "^5.8.3"
+  },
+  "overrides": {
+    "@ngrx/signals": {
+      "@angular/core": "20.0.0"
+    }
   }
 }
