--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,6 +30,7 @@ jobs:
         npm run init
     - name: Build HTML
       run: |-
+        # npm run build-background-removal-data
         npm run build-json-news-hacker-news
         npm run build-json-news-soylent-news
         npm run build-json-news-lobsters
