--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "init": "npm install",
     "start": "npm run clean && ng serve",
     "build": "npm run clean && ng build --output-mode static",
-    "build-html-news-hacker-news": "node util/build-html-news.mjs hacker-news",
-    "build-html-news-soylent-news": "node util/build-html-news.mjs soylent-news",
-    "build-html-news-lobsters": "node util/build-html-news.mjs lobsters",
-    "build-html-news-slashdot": "node util/build-html-news.mjs slashdot",
-    "build-json-news-hacker-news": "node util/build-json-news.mjs hacker-news > src/app/pages/news/hacker-news/hacker-news.json",
-    "build-json-news-soylent-news": "node util/build-json-news.mjs soylent-news > src/app/pages/news/soylent-news/soylent-news.json",
-    "build-json-news-lobsters": "node util/build-json-news.mjs lobsters > src/app/pages/news/lobsters/lobsters.json",
-    "build-json-news-slashdot": "node util/build-json-news.mjs slashdot > src/app/pages/news/slashdot/slashdot.json",
+    "build-background-removal-data": "node util/get-background-removal-data.mjs",
     "build-feed-herrick-design": "node util/get-feed-json.mjs https://herrickdesign.com/wp-json/wp/v2/posts src/app/pages/feeds/herrick-design/herrick-design.json",
     "build-feed-infinitym": "node util/get-feed-json.mjs https://infinitym.ca/wp-json/wp/v2/posts src/app/pages/feeds/infinitym/infinitym.json",
     "build-feed-karl-herrick": "node util/get-feed-json.mjs https://content.karlherrick.com/wp-json/wp/v2/posts src/app/pages/feeds/karl-herrick/karl-herrick.json",
+    "build-html-news-hacker-news": "node util/build-html-news.mjs hacker-news",
+    "build-html-news-lobsters": "node util/build-html-news.mjs lobsters",
+    "build-html-news-slashdot": "node util/build-html-news.mjs slashdot",
+    "build-html-news-soylent-news": "node util/build-html-news.mjs soylent-news",
+    "build-json-news-hacker-news": "node util/build-json-news.mjs hacker-news > src/app/pages/news/hacker-news/hacker-news.json",
+    "build-json-news-lobsters": "node util/build-json-news.mjs lobsters > src/app/pages/news/lobsters/lobsters.json",
+    "build-json-news-slashdot": "node util/build-json-news.mjs slashdot > src/app/pages/news/slashdot/slashdot.json",
+    "build-json-news-soylent-news": "node util/build-json-news.mjs soylent-news > src/app/pages/news/soylent-news/soylent-news.json",
     "build-site-verification": "node util/build-site-verification.mjs dist/apps/browser/index.html",
-    "build-txt-sitemap": "node --no-warnings util/build-routes.mjs dist/apps/browser/sitemap.txt https://kherrick.github.io/apps",
     "build-txt-robots": "node util/build-txt-robots.mjs",
+    "build-txt-sitemap": "node --no-warnings util/build-routes.mjs dist/apps/browser/sitemap.txt https://kherrick.github.io/apps",
     "gh-pages--build-manifest": "node util/build-manifest.mjs dist/apps/browser/manifest.webmanifest /apps/ /apps/",
     "gh-pages--build-nojekyll": "node util/touch-nojekyll.mjs",
     "gh-pages--build-revision": "node util/set-revision.mjs dist/apps/browser/index.html",
@@ -72,6 +73,7 @@
     "@angular/build": "^20.0.2",
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.0",
+    "@imgly/background-removal": "^1.6.0",
     "@types/express": "^5.0.0",
     "@types/hammerjs": "^2.0.46",
     "@types/jasmine": "^5.1.5",
