--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular/router": "^20.0.0",
     "@angular/service-worker": "^20.0.0",
     "@angular/ssr": "^20.0.2",
+    "@imgly/background-removal": "^1.6.0",
     "@material/web": "^2.3.0",
     "@ngrx/signals": "^19.2.1",
     "@tensorflow-models/blazeface": "^0.1.0",
@@ -61,6 +62,7 @@
     "material-tokens": "github:kherrick/material-tokens",
     "minimal-c-sharp-wasm": "github:kherrick/minimal-c-sharp-wasm#0.0.1+angular",
     "node-forge": "^1.3.1",
+    "onnxruntime-web": "^1.21.0-dev.20250206-d981b153d3",
     "peerjs": "github:kherrick/peerjs#v1.5.4-custom-events.0",
     "pwgen": "^1.2.6",
     "rxjs": "^7.8.2",
@@ -73,7 +75,6 @@
     "@angular/build": "^20.0.2",
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.0",
-    "@imgly/background-removal": "^1.6.0",
     "@types/express": "^5.0.0",
     "@types/hammerjs": "^2.0.46",
     "@types/jasmine": "^5.1.5",
