--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "apps",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "clean": "node util/build-clean.mjs",
     "init": "npm install",
-    "start": "npm run clean && ng serve",
-    "build": "npm run clean && ng build --output-mode static",
+    "build": "npm run clean && ng build",
+    "start": "npm run clean && ng serve --configuration development",
     "build-background-removal-data": "node util/get-background-removal-data.mjs",
     "build-feed-herrick-design": "node util/get-feed-json.mjs https://herrickdesign.com/wp-json/wp/v2/posts src/app/pages/feeds/herrick-design/herrick-design.json",
     "build-feed-infinitym": "node util/get-feed-json.mjs https://infinitym.ca/wp-json/wp/v2/posts src/app/pages/feeds/infinitym/infinitym.json",
@@ -21,38 +21,47 @@
     "build-json-news-soylent-news": "node util/build-json-news.mjs soylent-news > src/app/pages/news/soylent-news/soylent-news.json",
     "build-site-verification": "node util/build-site-verification.mjs dist/apps/browser/index.html",
     "build-txt-robots": "node util/build-txt-robots.mjs",
-    "build-txt-sitemap": "node --no-warnings util/build-routes.mjs dist/apps/browser/sitemap.txt https://kherrick.github.io/apps",
+    "build-txt-sitemap": "node --no-warnings util/build-routes.mjs src/app/routes.list.txt dist/apps/browser/sitemap.txt https://kherrick.github.io/apps",
     "gh-pages--build-manifest": "node util/build-manifest.mjs dist/apps/browser/manifest.webmanifest /apps/ /apps/",
     "gh-pages--build-nojekyll": "node util/touch-nojekyll.mjs",
     "gh-pages--build-revision": "node util/set-revision.mjs dist/apps/browser/index.html",
-    "gh-pages--build": "npm run build -- --base-href '/apps/'",
+    "gh-pages--build": "npm run build -- --configuration production --base-href '/apps/'",
     "gh-pages--deploy": "gh-pages --no-history --dotfiles --dist dist/apps/browser --repo git@github.com:kherrick/apps.git --remote upstream",
     "ngsw:config": "ngsw-config ./dist/apps/browser/ ./ngsw-config.json /apps/",
     "watch": "npm run build -- --watch --configuration development",
+    "serve:ssr:shell": "node dist/shell/server/server.mjs",
     "test": "npm run test-ci",
     "test-debug": "ng test --code-coverage --progress --watch true",
-    "test-ci": "ng test --browsers ChromeHeadless --watch false",
-    "build:ssr:shell": "npm run build -- --output-mode server",
-    "serve:ssr:shell": "node dist/apps/server/server.mjs"
+    "test-ci": "ng test --browsers ChromeHeadless --watch false"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true,
+    "overrides": [
+      {
+        "files": "*.html",
+        "options": {
+          "parser": "angular"
+        }
+      }
+    ]
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.1.6",
-    "@angular/cdk": "^20.1.5",
-    "@angular/common": "^20.1.6",
-    "@angular/compiler": "^20.1.6",
-    "@angular/core": "^20.1.6",
-    "@angular/forms": "^20.1.6",
-    "@angular/material": "^20.1.5",
-    "@angular/platform-browser": "^20.1.6",
-    "@angular/platform-browser-dynamic": "^20.1.6",
-    "@angular/platform-server": "^20.1.6",
-    "@angular/router": "^20.1.6",
-    "@angular/service-worker": "^20.1.6",
-    "@angular/ssr": "^20.1.5",
-    "@imgly/background-removal": "^1.6.0",
-    "@material/web": "^2.3.0",
-    "@ngrx/signals": "^20.0.0",
+    "@angular/animations": "^20.3.4",
+    "@angular/common": "^20.3.4",
+    "@angular/compiler": "^20.3.4",
+    "@angular/core": "^20.3.4",
+    "@angular/forms": "^20.3.4",
+    "@angular/material": "^20.2.8",
+    "@angular/platform-browser": "^20.3.4",
+    "@angular/platform-server": "^20.3.4",
+    "@angular/router": "^20.3.4",
+    "@angular/service-worker": "^20.3.4",
+    "@angular/ssr": "^20.3.5",
+    "@imgly/background-removal": "^1.7.0",
+    "@material/web": "^2.4.0",
+    "@ngrx/signals": "^20.0.1",
     "@tensorflow-models/blazeface": "^0.1.0",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-wasm": "^4.22.0",
@@ -62,38 +71,38 @@
     "material-tokens": "github:kherrick/material-tokens",
     "minimal-c-sharp-wasm": "github:kherrick/minimal-c-sharp-wasm#0.0.1+angular",
     "node-forge": "^1.3.1",
-    "onnxruntime-web": "^1.21.0-dev.20250206-d981b153d3",
+    "onnxruntime-web": "^1.21.0",
     "peerjs": "github:kherrick/peerjs#v1.5.4-custom-events.0",
     "pwgen": "^1.2.6",
-    "rxjs": "^7.8.2",
-    "tslib": "^2.8.1",
-    "uuid": "^11.1.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.8.0",
+    "uuid": "^13.0.0",
     "x-pwgen-components": "github:kherrick/x-pwgen-components",
-    "zxing-wasm": "^2.1.0"
+    "zxing-wasm": "^2.2.2"
   },
   "devDependencies": {
-    "@angular/build": "^20.1.5",
-    "@angular/cli": "^20.1.5",
-    "@angular/compiler-cli": "^20.1.6",
-    "@types/express": "^5.0.0",
+    "@angular/build": "^20.3.5",
+    "@angular/cli": "^20.3.5",
+    "@angular/compiler-cli": "^20.3.4",
+    "@types/express": "^5.0.1",
     "@types/hammerjs": "^2.0.46",
-    "@types/jasmine": "^5.1.5",
-    "@types/md5": "^2.3.5",
-    "@types/node": "^22.13.1",
-    "@types/node-forge": "^1.3.11",
-    "@xmldom/xmldom": "^0.9.8",
+    "@types/jasmine": "~5.1.0",
+    "@types/node": "^24.7.1",
+    "@types/node-forge": "^1.3.14",
+    "@xmldom/xmldom": "^0.8.11",
     "autoprefixer": "^10.4.21",
+    "buffer": "^6.0.3",
     "gh-pages": "^6.3.0",
     "htmlnano": "^2.1.2",
-    "jasmine-core": "^5.6.0",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-coverage": "^2.2.1",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.1.0",
+    "jasmine-core": "~5.9.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "parse5": "^7.3.0",
     "prettier": "^3.5.3",
     "sanitize-html": "^2.16.0",
-    "typescript": "^5.8.3"
+    "typescript": "~5.9.2"
   }
 }
