--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "peerjs": "github:kherrick/peerjs#v1.5.4-custom-events.0",
     "pwgen": "^1.2.6",
     "rxjs": "~7.8.0",
+    "sprite-garden": "github:kherrick/sprite-garden#1.41.0",
     "tslib": "^2.8.0",
     "uuid": "^13.0.0",
     "x-pwgen-components": "github:kherrick/x-pwgen-components",
