--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@tensorflow-models/blazeface": "^0.1.0",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-wasm": "^4.22.0",
+    "block-garden": "github:kherrick/block-garden#1.11.6",
     "express": "^5.1.0",
     "hammerjs": "^2.0.8",
     "material-design-lite": "github:kherrick/material-design-lite#v3.0.0-rc.1.5",
@@ -92,6 +93,7 @@
     "@types/node-forge": "^1.3.14",
     "@xmldom/xmldom": "^0.8.11",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.11",
     "buffer": "^6.0.3",
     "gh-pages": "^6.3.0",
     "htmlnano": "^2.1.2",
